tests/compile_errors/tuple-shorthand-hex-index.buzz
// Tuple property shorthand only accepts indexes 0, 1, 2 or 3
test "Tuple shorthand rejects hexadecimal index" {
    final tuple = .{ 1, 2, 3, 4 };

    _ = tuple.0x10;
}
